Update privacy policy

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 <p>&nbsp;</p> 
 <h4>Do third parties see and/or have access to information obtained by the Application?</h4> 
 <p></p> 
-<p>No.</p> 
+<p>Yes. We will share your information with third parties only in the ways that are described in this privacy statement.</p> 
+<p>We may disclose User Provided and Automatically Collected Information:</p> 
+<ul> 
+ <li> <p>as required by law, such as to comply with a subpoena, or similar legal process;</p> </li> 
+ <li> <p>when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a&nbsp;government request;</p> </li> 
+ <li> <p>with our trusted services providers who work on our behalf, do not have an&nbsp;independent use of the information we disclose to them, and have agreed to adhere&nbsp;to the rules set forth in this privacy statement.</p> </li> 
+ <li> <p>if&nbsp;Developer Company Name&nbsp;is involved in a merger, acquisition, or sale of all or a&nbsp;portion of its assets, you will be notified via email and/or a prominent notice on our Web site of any change in ownership or uses of this information, as well as any choices you may have regarding this information.</p> </li> 
+ <li>to advertisers and third party advertising networks and analytics companies as described in the section below</li> 
+</ul> 
 <p>&nbsp;</p> 
 <h4>Automatic Data Collection and Advertising</h4> 
 <p></p> 
